--- a/static/vertical.css
+++ b/static/vertical.css
@@ -284,7 +284,7 @@
     .slideshow-ticket {
         top: -120vw;
         height: 80vw;
-        margin-left: 4%;
+        margin-left: 8%;
     }
 
     .slideshow-ticket.animate {
